deploy/step04/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    spec/ingress.class: nginx
  name: simple-example
spec:
  defaultBackend:
    service:
      name: hso-takeover-svc
      port:
        number: 8080
  ingressClassName: nginx
  rules:
  - host: bumjin.local
    http:
      paths:
      - backend:
          service:
            name: hso-takeover-svc
            port:
              number: 8080
        path: /one
        pathType: Prefix
